feat: Externalize database credentials in Docker Compose and dynamically configure CORS allowed origins from properties.