@@ -103,23 +103,13 @@ public class SecurityConfig {
         return http.build();
     }
 
+    @org.springframework.beans.factory.annotation.Value("${cors.allowed-origins}")
+    private String corsAllowedOrigins;
+
     /**
      * Configura CORS (Cross-Origin Resource Sharing) para la aplicación.
      * 
-     * Permite peticiones desde múltiples orígenes (frontends en desarrollo):
-     * - React: localhost:3000
-     * - Angular: localhost:4200
-     * - Vite: localhost:5173
-     * - Acceso móvil: 192.168.40.25:3000
-     * 
-     * Configuración:
-     * - Métodos permitidos: GET, POST, PUT, DELETE, OPTIONS, PATCH
-     * - Headers: Todos (*)
-     * - Credenciales: Habilitadas (permite cookies y Authorization header)
-     * - Max Age: 3600s (cache de preflight requests)
-     * - Headers expuestos: Authorization (para que el cliente pueda leerlo)
-     * 
-     * IMPORTANTE: En producción, reemplazar con orígenes específicos del dominio.
+     * Permite peticiones desde múltiples orígenes definidos en la configuración.
      * 
      * @return CorsConfigurationSource configurado
      */
@@ -127,14 +117,12 @@ public class SecurityConfig {
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // Orígenes permitidos (desarrollo)
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:3000", // React
-                "http://localhost:4200", // Angular
-                "http://localhost:8080",
-                "http://localhost:5173", // Vite
-                "http://192.168.40.25:3000" // Mobile Access (Current Network IP)
-        ));
+        // Orígenes permitidos (desde configuración)
+        if (corsAllowedOrigins != null && !corsAllowedOrigins.trim().isEmpty()) {
+            configuration.setAllowedOrigins(Arrays.asList(corsAllowedOrigins.split(",")));
+        } else {
+            configuration.setAllowedOrigins(List.of("*")); // Fallback (no recomendado prod)
+        }
 
         // Métodos HTTP permitidos
         configuration.setAllowedMethods(Arrays.asList(
